<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_activity_detail">Detail</string>

    <string name="title">Fantastic Beasts: The Crimes of Grindelwald</string>
    <string name="genre">Action &amp; Adventure, Sci-Fi &amp; Fantasy, Comedy, Drama</string>
    <string name="tagline">Film ngak jelas.</string>
    <string name="duration">10h 10m</string>
    <string name="user_score">90</string>
    <string name="user_score_title">User\nScore</string>
    <string name="year">2099</string>
    <string name="overview">Earth\'s future has been riddled by disasters, famines, and droughts. There is only one way to ensure mankind\'s survival: Interstellar travel. A newly discovered wormhole in the far reaches of our solar system allows a team of astronauts to go where no man has gone before, a planet that may have the right environment to sustain human life.</string>
    <string name="similar_movies_title">Similar Movies</string>
    <string name="overview_title">Overview</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="movie_catalogue_icon">Movie Catalogue Icon</string>
    <string name="movie_catalogue_title">Movie Catalogue Title</string>
    <string name="tv_show_fav">Tv Shows</string>
    <string name="movie_fav">Movies</string>
    <string name="favorite">Favorite</string>
    <string name="menu_az">A - Z</string>
    <string name="menu_za">Z - A</string>
    <string name="menu_default">Default</string>
    <string name="title_favorite">Favorite</string>
    <string name="data_not_found">Data not found</string>
    <string name="image_for_data_not_found">Image for data not found</string>
    <string name="image_backdrop">Image Backdrop</string>
    <string name="add_to_favorite">Add To Favorite</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="popular_tv_shows">Popular Tv Shows</string>
    <string name="latest_tv_shows">Latest Tv Shows</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="retry">Retry</string>
    <string name="more_popular">More Popular</string>
    <string name="load_more_message">Load More</string>
    <string name="reach_max_page_message">Reach Max Page.</string>
</resources>